--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -5,7 +5,7 @@ $mdi-font-weight:      "normal";
 $mdi-font-path:        "../fonts" !default;
 $mdi-font-size-base:   24px !default;
 $mdi-css-prefix:       mdi !default;
-$mdi-version:          "6.3.95" !default;
+$mdi-version:          "6.4.95" !default;
 
 $mdi-icons: (
   "ab-testing": F01C9,
@@ -114,6 +114,8 @@ $mdi-icons: (
   "account-supervisor-outline": F112D,
   "account-switch": F0019,
   "account-switch-outline": F04CB,
+  "account-sync": F191B,
+  "account-sync-outline": F191C,
   "account-tie": F0CE3,
   "account-tie-hat": F1898,
   "account-tie-hat-outline": F1899,
@@ -127,6 +129,8 @@ $mdi-icons: (
   "account-wrench": F189A,
   "account-wrench-outline": F189B,
   "adjust": F001A,
+  "advertisements": F192A,
+  "advertisements-off": F192B,
   "air-conditioner": F001B,
   "air-filter": F0D43,
   "air-horn": F0DAC,
@@ -1127,6 +1131,7 @@ $mdi-icons: (
   "bus-articulated-front": F079D,
   "bus-clock": F08CA,
   "bus-double-decker": F079E,
+  "bus-electric": F191D,
   "bus-marker": F1212,
   "bus-multiple": F0F3F,
   "bus-school": F079F,
@@ -1255,9 +1260,13 @@ $mdi-icons: (
   "car-battery": F010C,
   "car-brake-abs": F0C47,
   "car-brake-alert": F0C48,
+  "car-brake-fluid-level": F1909,
   "car-brake-hold": F0D5E,
+  "car-brake-low-pressure": F190A,
   "car-brake-parking": F0D5F,
   "car-brake-retarder": F1017,
+  "car-brake-temperature": F190B,
+  "car-brake-worn-linings": F190C,
   "car-child-seat": F0FA3,
   "car-clutch": F1018,
   "car-cog": F13CC,
@@ -1278,6 +1287,7 @@ $mdi-icons: (
   "car-info": F11BE,
   "car-key": F0B6D,
   "car-lifted-pickup": F152D,
+  "car-light-alert": F190D,
   "car-light-dimmed": F0C4A,
   "car-light-fog": F0C4B,
   "car-light-high": F0C4C,
@@ -1294,6 +1304,7 @@ $mdi-icons: (
   "car-settings": F13CD,
   "car-shift-pattern": F0F40,
   "car-side": F07AB,
+  "car-speed-limiter": F190E,
   "car-sports": F07AC,
   "car-tire-alert": F0C4D,
   "car-traction-control": F0D64,
@@ -1471,6 +1482,7 @@ $mdi-icons: (
   "chart-timeline-variant": F0E93,
   "chart-timeline-variant-shimmer": F15B6,
   "chart-tree": F0E94,
+  "chart-waterfall": F1918,
   "chat": F0B79,
   "chat-alert": F0B7A,
   "chat-alert-outline": F12C9,
@@ -1513,6 +1525,7 @@ $mdi-icons: (
   "checkbox-marked": F0132,
   "checkbox-marked-circle": F0133,
   "checkbox-marked-circle-outline": F0134,
+  "checkbox-marked-circle-plus-outline": F1927,
   "checkbox-marked-outline": F0135,
   "checkbox-multiple-blank": F0136,
   "checkbox-multiple-blank-circle": F063B,
@@ -1771,6 +1784,8 @@ $mdi-icons: (
   "codepen": F0175,
   "coffee": F0176,
   "coffee-maker": F109F,
+  "coffee-maker-check": F1931,
+  "coffee-maker-check-outline": F1932,
   "coffee-maker-outline": F181B,
   "coffee-off": F0FAA,
   "coffee-off-outline": F0FAB,
@@ -1785,8 +1800,14 @@ $mdi-icons: (
   "cog-off": F13CE,
   "cog-off-outline": F13CF,
   "cog-outline": F08BB,
+  "cog-pause": F1933,
+  "cog-pause-outline": F1934,
+  "cog-play": F1935,
+  "cog-play-outline": F1936,
   "cog-refresh": F145E,
   "cog-refresh-outline": F145F,
+  "cog-stop": F1937,
+  "cog-stop-outline": F1938,
   "cog-sync": F1460,
   "cog-sync-outline": F1461,
   "cog-transfer": F105B,
@@ -1852,6 +1873,8 @@ $mdi-icons: (
   "compass-off-outline": F0B81,
   "compass-outline": F018C,
   "compass-rose": F1382,
+  "cone": F194C,
+  "cone-off": F194D,
   "connection": F1616,
   "console": F018D,
   "console-line": F07B7,
@@ -1920,6 +1943,7 @@ $mdi-icons: (
   "cookie-settings": F16DC,
   "cookie-settings-outline": F16DD,
   "coolant-temperature": F03C8,
+  "copyleft": F1939,
   "copyright": F05E6,
   "cordova": F0958,
   "corn": F07B8,
@@ -1929,6 +1953,7 @@ $mdi-icons: (
   "countertop": F181C,
   "countertop-outline": F181D,
   "cow": F019A,
+  "cow-off": F18FC,
   "cpu-32-bit": F0EDF,
   "cpu-64-bit": F0EE0,
   "crane": F0862,
@@ -1937,10 +1962,14 @@ $mdi-icons: (
   "credit-card": F0FEF,
   "credit-card-check": F13D0,
   "credit-card-check-outline": F13D1,
+  "credit-card-chip": F190F,
+  "credit-card-chip-outline": F1910,
   "credit-card-clock": F0EE1,
   "credit-card-clock-outline": F0EE2,
   "credit-card-edit": F17D7,
   "credit-card-edit-outline": F17D8,
+  "credit-card-fast": F1911,
+  "credit-card-fast-outline": F1912,
   "credit-card-lock": F18E7,
   "credit-card-lock-outline": F18E8,
   "credit-card-marker": F06A8,
@@ -2045,6 +2074,8 @@ $mdi-icons: (
   "cursor-text": F05E7,
   "curtains": F1846,
   "curtains-closed": F1847,
+  "cylinder": F194E,
+  "cylinder-off": F194F,
   "dance-ballroom": F15FB,
   "dance-pole": F1578,
   "data-matrix": F153C,
@@ -2074,6 +2105,10 @@ $mdi-icons: (
   "database-edit-outline": F162B,
   "database-export": F095E,
   "database-export-outline": F162C,
+  "database-eye": F191F,
+  "database-eye-off": F1920,
+  "database-eye-off-outline": F1921,
+  "database-eye-outline": F1922,
   "database-import": F095D,
   "database-import-outline": F162D,
   "database-lock": F0AAA,
@@ -2352,6 +2387,8 @@ $mdi-icons: (
   "email-receive-outline": F10DB,
   "email-remove": F1661,
   "email-remove-outline": F1662,
+  "email-seal": F195B,
+  "email-seal-outline": F195C,
   "email-search": F0961,
   "email-search-outline": F0962,
   "email-send": F10DC,
@@ -2440,6 +2477,10 @@ $mdi-icons: (
   "export": F0207,
   "export-variant": F0B93,
   "eye": F0208,
+  "eye-arrow-left": F18FD,
+  "eye-arrow-left-outline": F18FE,
+  "eye-arrow-right": F18FF,
+  "eye-arrow-right-outline": F1900,
   "eye-check": F0D04,
   "eye-check-outline": F0D05,
   "eye-circle": F0B94,
@@ -2495,6 +2536,7 @@ $mdi-icons: (
   "fan-speed-3": F1474,
   "fast-forward": F0211,
   "fast-forward-10": F0D71,
+  "fast-forward-15": F193A,
   "fast-forward-30": F0D06,
   "fast-forward-5": F11F8,
   "fast-forward-60": F160B,
@@ -2561,7 +2603,13 @@ $mdi-icons: (
   "file-image": F021F,
   "file-image-marker": F1772,
   "file-image-marker-outline": F1773,
+  "file-image-minus": F193B,
+  "file-image-minus-outline": F193C,
   "file-image-outline": F0EB0,
+  "file-image-plus": F193D,
+  "file-image-plus-outline": F193E,
+  "file-image-remove": F193F,
+  "file-image-remove-outline": F1940,
   "file-import": F0220,
   "file-import-outline": F102F,
   "file-jpg-box": F0225,
@@ -2847,6 +2895,8 @@ $mdi-icons: (
   "food-hot-dog": F184B,
   "food-kosher": F1573,
   "food-off": F05F3,
+  "food-off-outline": F1915,
+  "food-outline": F1916,
   "food-steak": F146A,
   "food-steak-off": F146B,
   "food-takeout-box": F1836,
@@ -2910,6 +2960,7 @@ $mdi-icons: (
   "format-letter-case-upper": F0B36,
   "format-letter-ends-with": F0FB8,
   "format-letter-matches": F0FB9,
+  "format-letter-spacing": F1956,
   "format-letter-starts-with": F0FBA,
   "format-line-spacing": F0278,
   "format-line-style": F05C8,
@@ -2926,6 +2977,7 @@ $mdi-icons: (
   "format-list-text": F126F,
   "format-overline": F0EB3,
   "format-page-break": F06D7,
+  "format-page-split": F1917,
   "format-paint": F027C,
   "format-paragraph": F027D,
   "format-pilcrow": F06D8,
@@ -2974,6 +3026,7 @@ $mdi-icons: (
   "fountain-pen": F0D12,
   "fountain-pen-tip": F0D13,
   "freebsd": F08E0,
+  "french-fries": F1957,
   "frequently-asked-questions": F0EB4,
   "fridge": F0290,
   "fridge-alert": F11B1,
@@ -3024,6 +3077,7 @@ $mdi-icons: (
   "gamepad-circle-up": F0E38,
   "gamepad-down": F0E39,
   "gamepad-left": F0E3A,
+  "gamepad-outline": F1919,
   "gamepad-right": F0E3B,
   "gamepad-round": F0E3C,
   "gamepad-round-down": F0E3D,
@@ -3209,6 +3263,7 @@ $mdi-icons: (
   "hand-back-right-off": F1831,
   "hand-back-right-off-outline": F1833,
   "hand-back-right-outline": F182D,
+  "hand-clap": F194B,
   "hand-coin": F188F,
   "hand-coin-outline": F1890,
   "hand-extended": F18B6,
@@ -3346,6 +3401,8 @@ $mdi-icons: (
   "home-analytics": F0EBA,
   "home-assistant": F07D0,
   "home-automation": F07D1,
+  "home-battery": F1901,
+  "home-battery-outline": F1902,
   "home-circle": F07D2,
   "home-circle-outline": F104D,
   "home-city": F0D15,
@@ -3368,6 +3425,8 @@ $mdi-icons: (
   "home-import-outline": F0F9C,
   "home-lightbulb": F1251,
   "home-lightbulb-outline": F1252,
+  "home-lightning-bolt": F1903,
+  "home-lightning-bolt-outline": F1904,
   "home-lock": F08EB,
   "home-lock-open": F08EC,
   "home-map-marker": F05F8,
@@ -3519,6 +3578,7 @@ $mdi-icons: (
   "information-variant": F064E,
   "instagram": F02FE,
   "instrument-triangle": F104E,
+  "integrated-circuit-chip": F1913,
   "invert-colors": F0301,
   "invert-colors-off": F0E4A,
   "iobroker": F12E8,
@@ -3671,6 +3731,8 @@ $mdi-icons: (
   "layers-triple-outline": F0F59,
   "lead-pencil": F064F,
   "leaf": F032A,
+  "leaf-circle": F1905,
+  "leaf-circle-outline": F1906,
   "leaf-maple": F0C93,
   "leaf-maple-off": F12DA,
   "leaf-off": F12D9,
@@ -3744,6 +3806,7 @@ $mdi-icons: (
   "linux-mint": F08ED,
   "lipstick": F13B5,
   "liquid-spot": F1826,
+  "liquor": F191E,
   "list-status": F15AB,
   "litecoin": F0A61,
   "loading": F0772,
@@ -3915,6 +3978,8 @@ $mdi-icons: (
   "message-arrow-left-outline": F12F3,
   "message-arrow-right": F12F4,
   "message-arrow-right-outline": F12F5,
+  "message-badge": F1941,
+  "message-badge-outline": F1942,
   "message-bookmark": F15AC,
   "message-bookmark-outline": F15AD,
   "message-bulleted": F06A2,
@@ -4209,13 +4274,16 @@ $mdi-icons: (
   "network-strength-3-alert": F08F9,
   "network-strength-4": F08FA,
   "network-strength-4-alert": F08FB,
+  "network-strength-4-cog": F191A,
   "network-strength-off": F08FC,
   "network-strength-off-outline": F08FD,
   "network-strength-outline": F08FE,
   "new-box": F0394,
   "newspaper": F0395,
+  "newspaper-check": F1943,
   "newspaper-minus": F0F0C,
   "newspaper-plus": F0F0D,
+  "newspaper-remove": F1944,
   "newspaper-variant": F1001,
   "newspaper-variant-multiple": F1002,
   "newspaper-variant-multiple-outline": F1003,
@@ -4372,9 +4440,13 @@ $mdi-icons: (
   "octagon-outline": F03C4,
   "octagram": F06F9,
   "octagram-outline": F0775,
+  "octahedron": F1950,
+  "octahedron-off": F1951,
   "odnoklassniki": F03C5,
   "offer": F121B,
   "office-building": F0991,
+  "office-building-cog": F1949,
+  "office-building-cog-outline": F194A,
   "office-building-marker": F1520,
   "office-building-marker-outline": F1521,
   "office-building-outline": F151F,
@@ -4441,6 +4513,7 @@ $mdi-icons: (
   "palette-outline": F0E0C,
   "palette-swatch": F08B5,
   "palette-swatch-outline": F135C,
+  "palette-swatch-variant": F195A,
   "palm-tree": F1055,
   "pan": F0BB4,
   "pan-bottom-left": F0BB5,
@@ -4457,9 +4530,12 @@ $mdi-icons: (
   "pandora": F03DB,
   "panorama": F03DC,
   "panorama-fisheye": F03DD,
-  "panorama-horizontal": F03DE,
-  "panorama-vertical": F03DF,
-  "panorama-wide-angle": F03E0,
+  "panorama-horizontal": F1928,
+  "panorama-horizontal-outline": F03DE,
+  "panorama-vertical": F1929,
+  "panorama-vertical-outline": F03DF,
+  "panorama-wide-angle": F195F,
+  "panorama-wide-angle-outline": F03E0,
   "paper-cut-vertical": F03E1,
   "paper-roll": F1157,
   "paper-roll-outline": F1158,
@@ -4752,6 +4828,7 @@ $mdi-icons: (
   "propane-tank-outline": F1358,
   "protocol": F0FD8,
   "publish": F06A7,
+  "publish-off": F1945,
   "pulse": F0430,
   "pump": F1402,
   "pumpkin": F0BBF,
@@ -4773,6 +4850,8 @@ $mdi-icons: (
   "puzzle-remove-outline": F14D8,
   "puzzle-star": F14D5,
   "puzzle-star-outline": F14DB,
+  "pyramid": F1952,
+  "pyramid-off": F1953,
   "qi": F0999,
   "qqchat": F0605,
   "qrcode": F0432,
@@ -4914,6 +4993,7 @@ $mdi-icons: (
   "restore-alert": F110D,
   "rewind": F045F,
   "rewind-10": F0D2A,
+  "rewind-15": F1946,
   "rewind-30": F0D96,
   "rewind-5": F11F9,
   "rewind-60": F160C,
@@ -5030,6 +5110,8 @@ $mdi-icons: (
   "scanner-off": F090A,
   "scatter-plot": F0EC9,
   "scatter-plot-outline": F0ECA,
+  "scent": F1958,
+  "scent-off": F1959,
   "school": F0474,
   "school-outline": F1180,
   "scissors-cutting": F0A6B,
@@ -5336,10 +5418,13 @@ $mdi-icons: (
   "smog": F0A71,
   "smoke": F1799,
   "smoke-detector": F0392,
+  "smoke-detector-alert": F192E,
+  "smoke-detector-alert-outline": F192F,
   "smoke-detector-off": F1809,
   "smoke-detector-off-outline": F180A,
   "smoke-detector-outline": F1808,
   "smoke-detector-variant": F180B,
+  "smoke-detector-variant-alert": F1930,
   "smoke-detector-variant-off": F180C,
   "smoking": F04B4,
   "smoking-off": F04B5,
@@ -5436,6 +5521,8 @@ $mdi-icons: (
   "speedometer-medium": F0F85,
   "speedometer-slow": F0F86,
   "spellcheck": F04C6,
+  "sphere": F1954,
+  "sphere-off": F1955,
   "spider": F11EA,
   "spider-thread": F11EB,
   "spider-web": F0BCA,
@@ -5538,6 +5625,8 @@ $mdi-icons: (
   "sticker-text-outline": F178F,
   "stocking": F04DA,
   "stomach": F1093,
+  "stool": F195D,
+  "stool-outline": F195E,
   "stop": F04DB,
   "stop-circle": F0666,
   "stop-circle-outline": F0667,
@@ -5709,6 +5798,8 @@ $mdi-icons: (
   "tag-plus-outline": F1222,
   "tag-remove": F0723,
   "tag-remove-outline": F1223,
+  "tag-search": F1907,
+  "tag-search-outline": F1908,
   "tag-text": F1224,
   "tag-text-outline": F04FD,
   "tailwind": F13FF,
@@ -5795,6 +5886,7 @@ $mdi-icons: (
   "thumb-up": F0513,
   "thumb-up-outline": F0514,
   "thumbs-up-down": F0515,
+  "thumbs-up-down-outline": F1914,
   "ticket": F0516,
   "ticket-account": F0517,
   "ticket-confirmation": F0518,
@@ -5827,12 +5919,16 @@ $mdi-icons: (
   "timer": F13AB,
   "timer-10": F051C,
   "timer-3": F051D,
+  "timer-cog": F1925,
+  "timer-cog-outline": F1926,
   "timer-off": F13AC,
   "timer-off-outline": F051E,
   "timer-outline": F051B,
   "timer-sand": F051F,
   "timer-sand-empty": F06AD,
   "timer-sand-full": F078C,
+  "timer-settings": F1923,
+  "timer-settings-outline": F1924,
   "timetable": F0520,
   "tire": F1896,
   "toaster": F1063,
@@ -5925,6 +6021,8 @@ $mdi-icons: (
   "translate": F05CA,
   "translate-off": F0E06,
   "transmission-tower": F0D3E,
+  "transmission-tower-export": F192C,
+  "transmission-tower-import": F192D,
   "trash-can": F0A79,
   "trash-can-outline": F0A7A,
   "tray": F1294,
@@ -6115,6 +6213,8 @@ $mdi-icons: (
   "view-compact": F0E6B,
   "view-compact-outline": F0E6C,
   "view-dashboard": F056E,
+  "view-dashboard-edit": F1947,
+  "view-dashboard-edit-outline": F1948,
   "view-dashboard-outline": F0A1D,
   "view-dashboard-variant": F0843,
   "view-dashboard-variant-outline": F1489,
